--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -48,3 +48,6 @@ tracing.workspace = true
 [dev-dependencies]
 alloy-sol-types.workspace = true
 eyre.workspace = true
+alloy-signer-local.workspace = true
+alloy-signer.workspace = true
+alloy-network.workspace = true
