--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -51,3 +51,4 @@ eyre.workspace = true
 alloy-signer-local.workspace = true
 alloy-signer.workspace = true
 alloy-network.workspace = true
+tokio.workspace = true
