--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -29,6 +29,7 @@ reth-provider.workspace = true
 reth-primitives.workspace = true
 reth-transaction-pool.workspace = true
 reth-primitives-traits.workspace = true
+reth-payload-util.workspace = true
 
 # revm
 revm.workspace = true
@@ -43,7 +44,7 @@ alloy-rlp.workspace = true
 
 # misc
 tracing.workspace = true
-
+derive_more.workspace = true
 
 [dev-dependencies]
 alloy-sol-types.workspace = true
