--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -36,13 +36,22 @@ revm.workspace = true
 revm-primitives.workspace = true
 
 # alloy
+alloy.workspace = true
+alloy-network.workspace = true
+alloy-signer.workspace = true
+alloy-signer-local = { workspace = true, features = ["mnemonic"] }
+alloy-sol-types.workspace = true
 alloy-consensus.workspace = true
 alloy-eips.workspace = true
 alloy-rpc-types-debug.workspace = true
 op-alloy-consensus.workspace = true
+op-alloy-network.workspace = true
 alloy-rlp.workspace = true
 
 # misc
+futures.workspace = true
+tokio.workspace = true
+eyre.workspace = true
 tracing.workspace = true
 derive_more.workspace = true
 
@@ -52,4 +61,4 @@ eyre.workspace = true
 alloy-signer-local.workspace = true
 alloy-signer.workspace = true
 alloy-network.workspace = true
-tokio.workspace = true
+# tokio.workspace = true
