--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -46,6 +46,7 @@ alloy-eips.workspace = true
 alloy-rpc-types-debug.workspace = true
 op-alloy-consensus.workspace = true
 op-alloy-network.workspace = true
+op-alloy-rpc-types.workspace = true
 alloy-rlp.workspace = true
 
 # misc
