Builder Private Key

--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -39,7 +39,7 @@ revm-primitives.workspace = true
 alloy.workspace = true
 alloy-network.workspace = true
 alloy-signer.workspace = true
-alloy-signer-local = { workspace = true, features = ["mnemonic"] }
+alloy-signer-local.workspace = true
 alloy-sol-types.workspace = true
 alloy-consensus.workspace = true
 alloy-eips.workspace = true
