--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -22,7 +22,6 @@ reth-chain-state.workspace = true
 reth-evm.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-chainspec.workspace = true
-reth-optimism-consensus.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-primitives.workspace = true
 reth-provider.workspace = true
@@ -59,3 +58,4 @@ alloy-sol-types.workspace = true
 alloy-signer-local.workspace = true
 alloy-signer.workspace = true
 alloy-network.workspace = true
+op-revm.workspace = true
