--- a/world-chain-builder/crates/world/payload/Cargo.toml
+++ b/world-chain-builder/crates/world/payload/Cargo.toml
@@ -41,16 +41,15 @@ alloy-signer-local.workspace = true
 alloy-consensus.workspace = true
 alloy-eips.workspace = true
 alloy-rpc-types-debug.workspace = true
-op-alloy-consensus.workspace = true
-op-alloy-network.workspace = true
 op-alloy-rpc-types.workspace = true
 alloy-rlp.workspace = true
+op-revm.workspace = true
 
 # misc
-futures.workspace = true
 eyre.workspace = true
 tracing.workspace = true
 derive_more.workspace = true
+semaphore-rs.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
@@ -58,4 +57,3 @@ alloy-sol-types.workspace = true
 alloy-signer-local.workspace = true
 alloy-signer.workspace = true
 alloy-network.workspace = true
-op-revm.workspace = true
