--- a/world-chain-builder/crates/flashblocks/payload/Cargo.toml
+++ b/world-chain-builder/crates/flashblocks/payload/Cargo.toml
@@ -13,15 +13,21 @@ reth.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-chain-state.workspace = true
 reth-evm.workspace = true
-reth-optimism-node.workspace = true
-reth-optimism-chainspec.workspace = true
-reth-optimism-payload-builder.workspace = true
-reth-optimism-primitives.workspace = true
 reth-provider.workspace = true
 reth-primitives.workspace = true
 reth-transaction-pool.workspace = true
 reth-primitives-traits.workspace = true
 reth-payload-util.workspace = true
 
+# op-reth
+reth-optimism-forks.workspace = true
+reth-optimism-node.workspace = true
+reth-optimism-chainspec.workspace = true
+reth-optimism-payload-builder.workspace = true
+reth-optimism-primitives.workspace = true
+
 # tokio
 tokio.workspace = true
+
+# misc
+tracing.workspace = true
