--- a/world-chain-builder/crates/flashblocks/payload/Cargo.toml
+++ b/world-chain-builder/crates/flashblocks/payload/Cargo.toml
@@ -28,7 +28,9 @@ reth-optimism-primitives.workspace = true
 
 # tokio
 tokio.workspace = true
+tokio-tungstenite = "0.26.2"
 
 # misc
 tracing.workspace = true
 serde_json.workspace = true
+futures-util = "0.3"
