--- a/world-chain-builder/crates/flashblocks/payload/Cargo.toml
+++ b/world-chain-builder/crates/flashblocks/payload/Cargo.toml
@@ -26,6 +26,10 @@ reth-optimism-chainspec.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-primitives.workspace = true
 
+# alloy
+alloy-primitives.workspace = true
+alloy-serde = "0.7"
+
 # tokio
 tokio.workspace = true
 tokio-tungstenite = "0.26.2"
@@ -33,4 +37,5 @@ tokio-tungstenite = "0.26.2"
 # misc
 tracing.workspace = true
 serde_json.workspace = true
+serde.workspace = true
 futures-util = "0.3"
