--- a/world-chain-builder/crates/flashblocks/payload/Cargo.toml
+++ b/world-chain-builder/crates/flashblocks/payload/Cargo.toml
@@ -18,6 +18,7 @@ reth-primitives.workspace = true
 reth-transaction-pool.workspace = true
 reth-primitives-traits.workspace = true
 reth-payload-util.workspace = true
+revm.workspace = true
 
 # op-reth
 reth-optimism-forks.workspace = true
@@ -25,10 +26,14 @@ reth-optimism-node.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-primitives.workspace = true
+reth-optimism-consensus.workspace = true
 
 # alloy
+alloy-consensus.workspace = true
 alloy-primitives.workspace = true
+alloy-eips.workspace = true
 alloy-serde = "0.7"
+
 
 # tokio
 tokio.workspace = true
