--- a/crates/world/payload/Cargo.toml
+++ b/crates/world/payload/Cargo.toml
@@ -14,8 +14,7 @@ workspace = true
 # world-chain
 world-chain-builder-pool.workspace = true
 world-chain-builder-rpc.workspace = true
-
-flashblocks.workspace = true
+world-chain-builder-flashblocks.workspace = true
 
 # reth
 reth.workspace = true
