--- a/crates/world/payload/Cargo.toml
+++ b/crates/world/payload/Cargo.toml
@@ -42,8 +42,11 @@ alloy-signer-local.workspace = true
 alloy-consensus.workspace = true
 alloy-eips.workspace = true
 alloy-rpc-types-debug.workspace = true
-op-alloy-rpc-types.workspace = true
 alloy-rlp.workspace = true
+
+# op-alloy
+op-alloy-rpc-types.workspace = true
+op-alloy-consensus.workspace = true
 
 # misc
 eyre.workspace = true
