--- a/crates/flashblocks/payload/Cargo.toml
+++ b/crates/flashblocks/payload/Cargo.toml
@@ -11,7 +11,7 @@ license.workspace = true
 flashblocks-primitives.workspace = true
 flashblocks-builder.workspace = true
 flashblocks-p2p.workspace = true
-
+serde_json.workspace = true
 # reth
 reth.workspace = true
 reth-basic-payload-builder.workspace = true
@@ -38,3 +38,12 @@ metrics-derive.workspace = true
 tracing.workspace = true
 futures.workspace = true
 eyre.workspace = true
+parking_lot = { workspace = true, optional = true }
+serde = { workspace = true, optional = true }
+
+[dev-dependencies]
+parking_lot.workspace = true
+serde.workspace = true
+
+[features]
+test = ["flashblocks-builder/test"]
