--- a/crates/flashblocks/payload/Cargo.toml
+++ b/crates/flashblocks/payload/Cargo.toml
@@ -38,7 +38,6 @@ metrics-derive.workspace = true
 tracing.workspace = true
 futures.workspace = true
 eyre.workspace = true
-parking_lot = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 
 [dev-dependencies]
@@ -47,3 +46,4 @@ serde.workspace = true
 
 [features]
 test = ["flashblocks-builder/test"]
+diagnostics = ["flashblocks-builder/diagnostics"]
